fixing header/content/footer alignment

--- a/drupal/sites/all/themes/watershed/wn_rogue/css/rogue.css
+++ b/drupal/sites/all/themes/watershed/wn_rogue/css/rogue.css
@@ -15,6 +15,10 @@ body {
   margin: 0 auto -225px;
 }
 
+#content-inner {
+  padding: 0 40px 40px 0
+}
+
 #header {
   margin-top: 25px;
 }
