--- a/drupal/sites/all/themes/watershed/wn_whiteoak/css/whiteoak.css
+++ b/drupal/sites/all/themes/watershed/wn_whiteoak/css/whiteoak.css
@@ -168,7 +168,7 @@ a {
 }
 
 #footer-inner {
-  padding: 25px 25px 0;
+  padding: 25px 25px 0 50px;
 }
 
 #footer .block {
